--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
             <div class="btns-presentacion">
                 <a class="btn btn-proyectos btn-skyblue" href="#portfolio">Ver proyectos</a>
-                <a class="btn btn-cv" href="#"><i class="fa-solid fa-arrow-down"></i> Descargar CV</a>
+                <a class="btn btn-cv" href="assets/CV/CV.pdf" target="_blank"><i class="fa-solid fa-arrow-down"></i> Descargar CV</a>
             </div>
         </div>
     </header>
