--- a/index.html
+++ b/index.html
@@ -38,26 +38,28 @@
                 Soy <span class="color-span">Fernando Malán.</span> Desarrollador web Frontend
             </p>
             <div class="btns-presentacion">
-                <a class="btn btn-proyectos btn-skyblue" href="#portfolio">Ver proyectos</a>
+                <a class="btn btn-proyectos btn-skyblue" href="#portfolio">Ver proyectos
+                    <i class="fa-solid fa-folder-open"></i>
+                </a>
                 <a class="btn btn-cv" href="assets/CV/CV.pdf" target="_blank"><i class="fa-solid fa-arrow-down"></i> Descargar CV</a>
             </div>
         </div>
     </header>
     <main class="main-section">
-        <section id="about" class="acerca-de section-styles flex-content">
+        <section id="about" class="acerca-de flex-content">
             <div class="content-perfil" data-aos="fade-down"
             data-aos-duration="1000">
                 <a href="https://github.com/MalanFernando" target="_blank"><i class="git fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/fernando-david-mal%C3%A1n-perugachi-b48b6321a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6tykO7VHTD%2BE2ktPRF56bw%3D%3D" target="_blank"><i class="linke fa-brands fa-linkedin"></i></a>
                 <a href="https://twitter.com/fernandomalan96" target="_blank"><i class="twitt fa-brands fa-twitter"></i></a>
                 <div class="circle-perfil"></div>
-                <a href="mailto:fernando-perugachi@hotmail.com" target="_blank" aria-label="Email" class="btn-contacto btn-skyblue"><i class="fa-regular fa-envelope"></i>Contáctame</a>
+                <a href="mailto:fernando-perugachi@hotmail.com" target="_blank" aria-label="Email" class="btn-contacto"><i class="fa-regular fa-envelope"></i>Contáctame</a>
             </div>
             <div class="card-acerca" data-aos="fade-up"
             data-aos-duration="1200">
                 <h2 class="subtit-section">Acerca de mí</h2>
                 <p class="parr-sections">
-                    Hola! Mi nombre es Fernando Malán, disfruto desarrollar soluciones para la web, sobre todo si estas están en el lado del Front, me encanta la creatividad y el diseño. Soy autodidacta por naturaleza, siempre estoy aprendiendo algo nuevo. 
+                    Hola! Mi nombre es Fernando David Malán, disfruto desarrollar soluciones para la web, sobre todo si estas están en el lado del Front, me encanta la creatividad y el diseño. Soy autodidacta por naturaleza, siempre estoy aprendiendo algo nuevo. 
                 </p>
             </div>
         </section>
@@ -122,7 +124,6 @@
                     <p>Web E-commerce</p>
                     <div class="btn-lateral">
                         <a href=""><i class="btn-git fa-brands fa-github"></i></a>
-                        <hr class="portf-line">
                         <a href=""><i class="btn-link fa-solid fa-rocket"></i></a>
                     </div>
                 </div>
@@ -134,7 +135,6 @@
                     <p>To DO list</p>
                     <div class="btn-lateral">
                         <a href=""><i class="btn-git fa-brands fa-github"></i></a>
-                        <hr class="portf-line">
                         <a href=""><i class="btn-link fa-solid fa-rocket"></i></a>
                     </div>
                 </div>
@@ -146,7 +146,6 @@
                     <p>Fitness app</p>
                     <div class="btn-lateral">
                         <a href=""><i class="btn-git fa-brands fa-github"></i></a>
-                        <hr class="portf-line">
                         <a href=""><i class="btn-link fa-solid fa-rocket"></i></a>
                     </div>
                 </div>
