--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="conte-section">
                     <p class="email">Email</p>
-                    <a class="mail" href="mailto:fernando-perugachi@hotmail.com" target="_blank" aria-label="Email">fernando...@email.com</a>
+                    <a class="mail" href="mailto:fernando-perugachi@hotmail.com" target="_blank" aria-label="Email">fernando-...@hotmail.com</a>
                 </div>
                 <div class="conte-section">
                     <p class="social">Social</p>
