update info and add short changes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <nav class="menu-nav"> 
                     <a href="#home">Inicio</a>
                     <a href="#about">Acerca de mí</a>
-                    <a href="#habilities">Habilidades</a>
-                    <a href="#formaerience">Formación</a>
+                    <a href="#technologies">Tecnologías</a>
+                    <a href="#training">Formación</a>
                     <a href="#portfolio">Portafolio</a>
                     <a href="#contact">Contacto</a>
                 </nav>
@@ -62,9 +62,9 @@
                 </p>
             </div>
         </section>
-        <section id="habilities" class="habilidades section-styles">
-            <h2 class="subtit-section">Habilidades</h2>
-            <img class="hab-img" data-aos="fade-up"
+        <section id="technologies" class="tecnologias section-styles">
+            <h2 class="subtit-section">Tecnologías</h2>
+            <img class="tec-img" data-aos="fade-up"
             data-aos-duration="1200" src="assets/img/work.svg" alt="">
             <div class="flex-card flex-content">
                 <p class="parr-sections">
@@ -72,14 +72,14 @@
                 </p>
                 <div class="flex-list">
                     <ul class="flex-content">
-                        <li class="hab-html" data-aos="fade-up" data-aos-duration="800"><i class="fa-brands fa-html5"></i><h3>Html</h3></li>
-                        <li class="hab-css" data-aos="fade-up" data-aos-duration="1000"><i class="fa-brands fa-css3-alt"></i><h3>Css</h3></li>
-                        <li class="hab-js" data-aos="fade-up" data-aos-duration="1400"><i class="fa-brands fa-js-square"></i><h3>JavaScript</h3></li>
-                        <li class="hab-git" data-aos="fade-up" data-aos-duration="1200"><i class="fa-brands fa-git-alt"></i><h3>Git</h3></li>
-                        <li class="hab-fig" data-aos="fade-up" data-aos-duration="1600"><i class="fa-brands fa-figma"></i><h3>Figma</h3></li>
-                        <li class="hab-illus" data-aos="fade-up" data-aos-duration="1800"><i class="fa-solid fa-bezier-curve"></i><h3>Illustrator</h3></li>
-                        <li class="hab-react" data-aos="fade-up" data-aos-duration="1800"><i class="fa-brands fa-react"></i><h3>React</h3></li>
-                        <li class="hab-node" data-aos="fade-up" data-aos-duration="1800"><i class="fa-brands fa-node-js"></i><h3>Node Js</h3></li>
+                        <li class="tec-html" data-aos="fade-up" data-aos-duration="800"><i class="fa-brands fa-html5"></i><h3>Html</h3></li>
+                        <li class="tec-css" data-aos="fade-up" data-aos-duration="1000"><i class="fa-brands fa-css3-alt"></i><h3>Css</h3></li>
+                        <li class="tec-js" data-aos="fade-up" data-aos-duration="1400"><i class="fa-brands fa-js-square"></i><h3>JavaScript</h3></li>
+                        <li class="tec-git" data-aos="fade-up" data-aos-duration="1200"><i class="fa-brands fa-git-alt"></i><h3>Git</h3></li>
+                        <li class="tec-fig" data-aos="fade-up" data-aos-duration="1600"><i class="fa-brands fa-figma"></i><h3>Figma</h3></li>
+                        <li class="tec-illus" data-aos="fade-up" data-aos-duration="1800"><i class="fa-solid fa-bezier-curve"></i><h3>Illustrator</h3></li>
+                        <li class="tec-react" data-aos="fade-up" data-aos-duration="1800"><i class="fa-brands fa-react"></i><h3>React</h3></li>
+                        <li class="tec-node" data-aos="fade-up" data-aos-duration="1800"><i class="fa-brands fa-node-js"></i><h3>Node Js</h3></li>
                     </ul>
                 </div>
             </div>
@@ -90,10 +90,10 @@
                     <div class="forma-list">
                         <ul>
                             <li>
-                                <h3 class="tit-forma" data-aos="fade-left">KeepCoding</h3>
-                                <div class="circle first" data-aos="fade-down" data-aos-duration="1000"></div>
+                                <h3 class="tit-forma" data-aos="fade-left">Academlo</h3>
+                                <div class="circle third" data-aos="fade-down" data-aos-duration="600"></div>
                                 <p class="text-forma" data-aos="fade-left">
-                                    <i class="fa-solid fa-graduation-cap"></i>2019 - 2020
+                                    <i class="fa-solid fa-graduation-cap"></i>2022 - 2022
                                 </p>
                             </li>
                             <li>
@@ -104,10 +104,10 @@
                                 </p>
                             </li>
                             <li>
-                                <h3 class="tit-forma" data-aos="fade-left">Academlo</h3>
-                                <div class="circle third" data-aos="fade-down" data-aos-duration="600"></div>
+                                <h3 class="tit-forma" data-aos="fade-left">KeepCoding</h3>
+                                <div class="circle first" data-aos="fade-down" data-aos-duration="1000"></div>
                                 <p class="text-forma" data-aos="fade-left">
-                                    <i class="fa-solid fa-graduation-cap"></i>2022 - 2022
+                                    <i class="fa-solid fa-graduation-cap"></i>2019 - 2020
                                 </p>
                             </li>
                         </ul>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="conte-section">
                     <p class="email">Email</p>
-                    <a class="mail" href="mailto:fernando-perugachi@hotmail.com" target="_blank" aria-label="Email">fernando-p...@hotmail.com</a>
+                    <a class="mail" href="mailto:fernando-perugachi@hotmail.com" target="_blank" aria-label="Email">fernando-per...@hotmail.com</a>
                 </div>
                 <div class="conte-section">
                     <p class="social">Social</p>
