Updated information and styles

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <a href="#home">Inicio</a>
                     <a href="#about">Acerca de mí</a>
                     <a href="#habilities">Habilidades</a>
-                    <a href="#formaerience">Formación</a>
-                    <a href="#portfolio">Portafolio</a>
+                    <a href="#formation">Formación</a>
+                    <a href="#projects">Proyectos</a>
                     <a href="#contact">Contacto</a>
                 </nav>
             </div>
@@ -58,17 +58,17 @@
             <div class="card-acerca" data-aos="fade-up" data-aos-duration="1200">
                 <h2 class="subtit-section">Acerca de mí</h2>
                 <p class="parr-sections">
-                    Hola! Mi nombre es Fernando David Malán, disfruto desarrollar soluciones para la web, sobre todo si estas están en el lado del Front, me encanta la creatividad y el diseño. Soy autodidacta por naturaleza, siempre estoy aprendiendo algo nuevo. 
+                    Hola! Soy de Ecuador <img class="icon-ec" src="assets/img/icon-ec.png" alt="EC"> tengo 26 años, autodidacta por naturaleza (siempre estoy buscando aprender algo nuevo), el diseño y la creatividad son mi punto fuerte y disfruto desarrollar soluciones para la web. Si me das la oportunidad me gustaria demostrar mis habilidades tanto blandas como técnicas y aportar un valor significativo a la empresa.
                 </p>
             </div>
         </section>
         <section id="habilities" class="habilidades section-styles">
-            <h2 class="subtit-section">Habilidades</h2>
+            <h2 class="subtit-section">Habilidades Técnicas</h2>
             <img class="hab-img" data-aos="fade-up"
             data-aos-duration="1200" src="assets/img/work.svg" alt="">
             <div class="flex-card flex-content">
                 <p class="parr-sections">
-                    Llevo alrededor de 2 años de estudio sobre diseño, maquetación y desarrollo web en general de manera autodidacta. Anteriormente estudie Ing. Informática llegando hasta cuarto semestre, del cual tuve que retirarme por factores externos. Actualmente tengo conocimiento básico e intermedio de las siguientes tecnologías.                  
+                    Llevo alrededor de 2 años y medio de estudio sobre diseño, maquetación y desarrollo web en general de manera autodidacta. Anteriormente estudié Ing. Informática llegando hasta cuarto semestre, no pude continuar por factores externos. Actualmente terminé un bootcamp como fullstack y tengo conocimiento básico e intermedio de las siguientes tecnologías.                  
                 </p>
                 <div class="flex-list">
                     <ul class="flex-content">
@@ -80,11 +80,12 @@
                         <li class="hab-illus" data-aos="fade-up" data-aos-duration="1800"><i class="fa-solid fa-bezier-curve"></i><h3>Illustrator</h3></li>
                         <li class="hab-react" data-aos="fade-up" data-aos-duration="1800"><i class="fa-brands fa-react"></i><h3>React</h3></li>
                         <li class="hab-node" data-aos="fade-up" data-aos-duration="1800"><i class="fa-brands fa-node-js"></i><h3>Node Js</h3></li>
+                        <li class="hab-db" data-aos="fade-up" data-aos-duration="1800"><i class="fa-solid fa-database"></i><h3>PostgreSQL</h3></li>
                     </ul>
                 </div>
             </div>
         </section>
-        <section id="training" class="formacion color-section section-styles">
+        <section id="formation" class="formacion color-section section-styles">
             <h2 class="subtit-section">Formación</h2>
                 <div class="forma-card flex-content">
                     <div class="forma-list">
@@ -117,8 +118,8 @@
                     </div>
                 </div>
         </section>
-        <section id="portfolio" class="portafolio section-styles">
-            <h2 class="subtit-section">Portafolio</h2>
+        <section id="projects" class="portafolio section-styles">
+            <h2 class="subtit-section">Proyectos</h2>
             <p>
                 Ultimos proyectos realizados
             </p>
