Revert "Updated information and styles"
This reverts commit bd805c77ee3515c58c3dfb042334c6c736feecca.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="card-acerca" data-aos="fade-up" data-aos-duration="1200">
                 <h2 class="subtit-section">Acerca de mí</h2>
                 <p class="parr-sections">
-                    Hola! Soy de Ecuador <img class="icon-ec" src="assets/img/icon-ec.png" alt="EC"> tengo 26 años, autodidacta por naturaleza (siempre estoy buscando aprender algo nuevo), el diseño y la creatividad son mi punto fuerte y disfruto desarrollar soluciones para la web. Si me das la oportunidad me gustaria demostrar mis habilidades tanto blandas como técnicas y aportar un valor significativo a la empresa.
+                    Hola! Mi nombre es Fernando David Malán, disfruto desarrollar soluciones para la web, sobre todo si estas están en el lado del Front, me encanta la creatividad y el diseño. Soy autodidacta por naturaleza, siempre estoy aprendiendo algo nuevo. 
                 </p>
             </div>
         </section>
@@ -68,7 +68,7 @@
             data-aos-duration="1200" src="assets/img/work.svg" alt="">
             <div class="flex-card flex-content">
                 <p class="parr-sections">
-                    Llevo alrededor de 2 años y medio de estudio sobre diseño, maquetación y desarrollo web en general de manera autodidacta. Anteriormente estudié Ing. Informática llegando hasta cuarto semestre, no pude continuar por factores externos. Actualmente terminé un bootcamp como fullstack y tengo conocimiento básico e intermedio de las siguientes tecnologías.                  
+                    Llevo alrededor de 2 años de estudio sobre diseño, maquetación y desarrollo web en general de manera autodidacta. Anteriormente estudie Ing. Informática llegando hasta cuarto semestre, del cual tuve que retirarme por factores externos. Actualmente tengo conocimiento básico e intermedio de las siguientes tecnologías.                  
                 </p>
                 <div class="flex-list">
                     <ul class="flex-content">
@@ -84,7 +84,7 @@
                 </div>
             </div>
         </section>
-        <section id="formation" class="formacion color-section section-styles">
+        <section id="training" class="formacion color-section section-styles">
             <h2 class="subtit-section">Formación</h2>
                 <div class="forma-card flex-content">
                     <div class="forma-list">
@@ -117,8 +117,8 @@
                     </div>
                 </div>
         </section>
-        <section id="projects" class="portafolio section-styles">
-            <h2 class="subtit-section">Proyectos</h2>
+        <section id="portfolio" class="portafolio section-styles">
+            <h2 class="subtit-section">Portafolio</h2>
             <p>
                 Ultimos proyectos realizados
             </p>
