Update resume and link Linkedin

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="btn btn-proyectos btn-skyblue" href="#portfolio">Ver proyectos
                     <i class="fa-solid fa-folder-open"></i>
                 </a>
-                <a class="btn btn-cv" href="assets/CV/CV.pdf" target="_blank"><i class="fa-solid fa-arrow-down"></i> Descargar CV</a>
+                <a class="btn btn-cv" href="assets/CV/CV-2022.pdf" target="_blank"><i class="fa-solid fa-arrow-down"></i> Descargar CV</a>
             </div>
         </div>
     </header>
@@ -50,7 +50,7 @@
             <div class="content-perfil" data-aos="fade-down"
             data-aos-duration="1000">
                 <a href="https://github.com/MalanFernando" target="_blank"><i class="git fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/fernando-david-mal%C3%A1n-perugachi-b48b6321a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6tykO7VHTD%2BE2ktPRF56bw%3D%3D" target="_blank"><i class="linke fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/fernando-david-malan-perugachi-b48b6321a/" target="_blank"><i class="linke fa-brands fa-linkedin"></i></a>
                 <a href="https://twitter.com/fernandomalan96" target="_blank"><i class="twitt fa-brands fa-twitter"></i></a>
                 <div class="circle-perfil"></div>
                 <a href="mailto:fernando-perugachi@hotmail.com" target="_blank" aria-label="Email" class="btn-contacto"><i class="fa-regular fa-envelope"></i>Contáctame</a>
@@ -218,7 +218,7 @@
                     <p class="social">Social</p>
                     <div class="icons-foot">
                         <a href="https://github.com/MalanFernando" target="_blank"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/fernando-david-mal%C3%A1n-perugachi-b48b6321a?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3B6tykO7VHTD%2BE2ktPRF56bw%3D%3D" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/fernando-david-malan-perugachi-b48b6321a/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/fernandomalan96" target="_blank"><i class="fa-brands fa-twitter"></i></a>
                     </div>
                 </div>
