Fixed upload CV

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <a class="btn btn-proyectos btn-skyblue" href="#portfolio">Ver proyectos
                     <i class="fa-solid fa-folder-open"></i>
                 </a>
-                <a class="btn btn-cv" href="assets/CV/CV-2022.pdf" target="_blank"><i class="fa-solid fa-arrow-down"></i> Descargar CV</a>
+                <a class="btn btn-cv" href="assets/CV/CV_2022.pdf" target="_blank"><i class="fa-solid fa-arrow-down"></i> Descargar CV</a>
             </div>
         </div>
     </header>
