Add changes for index and styles

--- a/index.html
+++ b/index.html
@@ -252,5 +252,8 @@
             once: true
         });
     </script>
+    <script type="text/javascript">
+        $('[data-aos]').parent().addClass('delete_extra_space');
+    </script>
 </body>
 </html>
