fix: remove data-aos library and fix overflow elements

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Fullstack Developer
           </h1>
           <div class="btns-presentacion">
-            <a class="btn btn-cv" href="assets/CV/CV_2022.pdf" target="_blank">
+            <a class="btn btn-cv" href="assets/CV/Resume-Fernando-EN.pdf" target="_blank">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="21"
@@ -100,8 +100,6 @@
         </div>
         <div
           class="content-profile"
-          data-aos="fade-down"
-          data-aos-duration="1000"
         >
           <div class="profile-photo">
             <a
@@ -174,7 +172,7 @@
             height="auto"
           />
         </div>
-        <div class="card-about" data-aos="fade-up" data-aos-duration="1200">
+        <div class="card-about">
           <h2 class="subtit-section">
             About <span class="yellow about-span">me</span>.
           </h2>
@@ -211,7 +209,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 256 256"><path fill="#599787" d="M245 110.64a16 16 0 0 0-13-6.64h-16V88a16 16 0 0 0-16-16h-69.33l-27.73-20.8a16.14 16.14 0 0 0-9.6-3.2H40a16 16 0 0 0-16 16v144a8 8 0 0 0 8 8h179.1a8 8 0 0 0 7.59-5.47l28.49-85.47a16.05 16.05 0 0 0-2.18-14.42M93.34 64l27.73 20.8a16.12 16.12 0 0 0 9.6 3.2H200v16H69.77a16 16 0 0 0-15.18 10.94L40 158.7V64Z"/></svg>
         </h2>
         <div class="cards-portaf flex-content">
-          <div class="card-content" data-aos="fade-up" data-aos-duration="1300">
+          <div class="card-content">
             <a
               class="card-link"
               href="https://glowing-cocada-605b6a.netlify.app/#/"
@@ -229,7 +227,7 @@
               </p>
             </div>
           </div>
-          <div class="card-content" data-aos="fade-up" data-aos-duration="1000">
+          <div class="card-content">
             <a
               class="card-link"
               href="https://choosebooks.netlify.app/"
@@ -247,7 +245,7 @@
               </p>
             </div>
           </div>
-          <div class="card-content" data-aos="fade-up" data-aos-duration="1600">
+          <div class="card-content">
             <a
               class="card-link"
               href="https://c14-04-m-node-react-yk1u.vercel.app/"
@@ -290,8 +288,6 @@
             <ul class="flex-content">
               <li
                 class="skill-js"
-                data-aos="fade-right"
-                data-aos-duration="1200"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -308,8 +304,6 @@
               </li>
               <li
                 class="a-second"
-                data-aos="fade-right"
-                data-aos-duration="1600"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -325,8 +319,6 @@
               </li>
               <li
                 class="skill-html"
-                data-aos="fade-left"
-                data-aos-duration="1300"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -343,8 +335,6 @@
               </li>
               <li
                 class="arrow a-first"
-                data-aos="fade-right"
-                data-aos-duration="1000"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -360,8 +350,6 @@
               </li>
               <li
                 class="skill-css"
-                data-aos="fade-left"
-                data-aos-duration="1200"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -378,8 +366,6 @@
               </li>
               <li
                 class="arrow a-third"
-                data-aos="fade-left"
-                data-aos-duration="1200"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -395,8 +381,6 @@
               </li>
               <li
                 class="skill-react"
-                data-aos="fade-left"
-                data-aos-duration="1000"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -413,8 +397,6 @@
               </li>
               <li
                 class="skill-next"
-                data-aos="fade-right"
-                data-aos-duration="1800"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -429,7 +411,7 @@
                 </svg>
                 <span>NextJs</span>
               </li>
-              <li class="hearth" data-aos="zoom-in" data-aos-duration="1100">
+              <li class="hearth">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="21"
@@ -444,8 +426,6 @@
               </li>
               <li
                 class="skill-expo"
-                data-aos="fade-right"
-                data-aos-duration="1800"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -462,8 +442,6 @@
               </li>
               <li
                 class="skill-node"
-                data-aos="fade-left"
-                data-aos-duration="800"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -480,8 +458,6 @@
               </li>
               <li
                 class="skill-typescript"
-                data-aos="fade-right"
-                data-aos-duration="1800"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -498,15 +474,11 @@
               </li>
               <li
                 class="skill-net"
-                data-aos="fade-right"
-                data-aos-duration="1000"
               >
                 <span>.Net</span>
               </li>
               <li
                 class="arrow a-fifth"
-                data-aos="fade-left"
-                data-aos-duration="600"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -522,8 +494,6 @@
               </li>
               <li
                 class="skill-db"
-                data-aos="fade-right"
-                data-aos-duration="900"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -540,8 +510,6 @@
               </li>
               <li
                 class="skill-mongo"
-                data-aos="fade-right"
-                data-aos-duration="1800"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -558,8 +526,6 @@
               </li>
               <li
                 class="arrow a-fourth"
-                data-aos="fade-down"
-                data-aos-duration="800"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -575,8 +541,6 @@
               </li>
               <li
                 class="skill-git"
-                data-aos="fade-right"
-                data-aos-duration="1200"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -593,15 +557,11 @@
               </li>
               <li
                 class="arrow smile"
-                data-aos="zoom-in"
-                data-aos-duration="1000"
               >
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#0a0214#0a0214" d="M12 2a2 2 0 0 1 2 2c0 .74-.4 1.39-1 1.73V7h1a7 7 0 0 1 7 7h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h1a7 7 0 0 1 7-7h1V5.73c-.6-.34-1-.99-1-1.73a2 2 0 0 1 2-2M7.5 13A2.5 2.5 0 0 0 5 15.5A2.5 2.5 0 0 0 7.5 18a2.5 2.5 0 0 0 2.5-2.5A2.5 2.5 0 0 0 7.5 13m9 0a2.5 2.5 0 0 0-2.5 2.5a2.5 2.5 0 0 0 2.5 2.5a2.5 2.5 0 0 0 2.5-2.5a2.5 2.5 0 0 0-2.5-2.5"/></svg>
               </li>
               <li
                 class="skill-fig"
-                data-aos="fade-right"
-                data-aos-duration="1000"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -618,8 +578,6 @@
               </li>
               <li
                 class="skill-illus"
-                data-aos="fade-left"
-                data-aos-duration="1200"
               > 
                 <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 32 32"><path fill="#FF9800" d="M0 .401v31.198h32V.401zm1.333 1.333h29.333v28.531H1.333zm9.766 16.334l-1.057 3.995c-.021.115-.063.135-.193.135H7.891c-.135 0-.156-.042-.135-.193l3.786-13.26c.068-.24.109-.453.13-1.115c0-.089.047-.13.115-.13h2.792c.089 0 .135.021.156.13l4.245 14.396c.026.109 0 .172-.109.172h-2.198c-.115 0-.177-.026-.198-.115l-1.104-4.016h-4.276zm3.719-2.167c-.375-1.474-1.255-4.703-1.583-6.266h-.026c-.281 1.557-.99 4.198-1.536 6.266zm6-7.411c0-.859.594-1.365 1.365-1.365c.813 0 1.365.552 1.365 1.365c0 .88-.573 1.365-1.391 1.365c-.797 0-1.344-.484-1.344-1.365zm.151 3.031c0-.104.042-.146.151-.146h2.094c.12 0 .161.042.161.156v10.526c0 .109-.021.151-.156.151h-2.063c-.135 0-.177-.063-.177-.172V11.52z"/></svg>
                 <span>Illustrator</span>
@@ -714,34 +672,34 @@
         <div class="forma-card">
           <ul class="card-list">
             <li class="list-schools sch-noCo">
-              <h4 class="tit-forma" data-aos="fade-left">
+              <h4 class="tit-forma">
                 No Country. <span class="span-noCount">Work Simulation</span>
               </h3>
-              <p class="text-forma" data-aos="fade-left">
+              <p class="text-forma">
                 Frontend developer 2023 - 2023
               </p>
             </li>
             <li class="list-schools sch-acad">
-              <h4 class="tit-forma" data-aos="fade-left">Academlo.</h3>
-              <p class="text-forma" data-aos="fade-left">
+              <h4 class="tit-forma">Academlo.</h3>
+              <p class="text-forma">
                 Full-Stack <span class="span-year">2022</span> - 2022
               </p>
             </li>
             <li class="list-schools sch-alura">
-              <h4 class="tit-forma" data-aos="fade-left">Alura Latam.</h3>
-              <p class="text-forma" data-aos="fade-left">
+              <h4 class="tit-forma">Alura Latam.</h3>
+              <p class="text-forma">
                 <span class="span-alura">Frontend</span> developer 2021 - 2021
               </p>
             </li>
             <li class="list-schools sch-keep">
-              <h4 class="tit-forma" data-aos="fade-left">KeepCoding.</h3>
-              <p class="text-forma" data-aos="fade-left">
+              <h4 class="tit-forma">KeepCoding.</h3>
+              <p class="text-forma">
                 Web <span class="span-keepCod">developer</span> 2019 - 2020
               </p>
             </li>
             <li class="list-schools sch-utpl">
-              <h4 class="tit-forma" data-aos="fade-left">UTPL.</h4>
-              <p class="text-forma" data-aos="fade-left">
+              <h4 class="tit-forma">UTPL.</h4>
+              <p class="text-forma">
                 <span class="span-utpl">Ing.</span> Informático 2017 - 2019
               </p>
             </li>
@@ -816,14 +774,5 @@
         </div>
       </div>
     </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        once: true
-      });
-    </script>
-    <script>
-      $('[data-aos]').parent().addClass('delete_extra_space');
-    </script>
   </body>
 </html>
